modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-labels/rendered/test_samples/pods/001-pod-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        bar: app.example.com
        foo: ok
    name: allowed-pod
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
