modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-labels/rendered/test_samples/pods/004-dep-disallowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        bar: app.example.com
    name: disallowed-dep
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    replicas: 1
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - image: nginx
                  name: nginx
