modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-labels/rendered/test_samples/pods/005-pod-disallowed-bar-regex.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        bar: bad.local
        foo: ok
    name: disallowed-pod-bar-regex
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
